--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nebular/theme": "10.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
     "@swimlane/ngx-datatable": "^20.1.0",
+    "@types/ws": "^8.5.4",
     "angular2-chartjs": "0.4.1",
     "angular2-notifications": "^12.0.0",
     "bootstrap": "4.3.1",
@@ -74,7 +75,7 @@
     "ng2-smart-table": "^1.6.0",
     "ngx-echarts": "^4.2.2",
     "ngx-mask": "^10.0.4",
-    "node-sass": "^4.14.1",
+    "node-sass": "^8.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "primeng": "^14.2.12-lts",
