--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nebular/theme": "10.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
     "@swimlane/ngx-datatable": "^20.1.0",
+    "@techiediaries/ngx-textarea-autosize": "^1.3.0",
     "@types/ws": "^8.5.4",
     "angular2-chartjs": "0.4.1",
     "angular2-notifications": "^12.0.0",
