--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@nebular/eva-icons": "10.0.0",
     "@nebular/security": "10.0.0",
     "@nebular/theme": "10.0.0",
+    "@stripe/stripe-js": "^4.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
     "@swimlane/ngx-datatable": "^20.1.0",
     "@techiediaries/ngx-textarea-autosize": "^1.3.0",
@@ -76,6 +77,7 @@
     "ng2-smart-table": "^1.6.0",
     "ngx-echarts": "^4.2.2",
     "ngx-mask": "^10.0.4",
+    "ngx-stripe": "^14.6.0",
     "ngx-toastr": "^18.0.0",
     "node-sass": "^8.0",
     "normalize.css": "6.0.0",
