--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "angular2-notifications": "^12.0.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
+    "chartjs-plugin-zoom": "^2.0.1",
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
@@ -107,6 +108,7 @@
     "@angular/language-service": "14.2.12",
     "@compodoc/compodoc": "1.0.1",
     "@fortawesome/fontawesome-free": "^5.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/d3-color": "1.0.5",
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "2.0.3",
